# core-cpp

./: .gitignore  CHANGELOG.md  CHANGELOG.tmp  CMakeLists.txt  README.md  config.h.in  index.html  versions.json
.github/: labeler.yml
.github/workflows/: build-and-release.yaml
1.2.4/: 404.html  index.html  sitemap.xml
1.2.4/CHANGELOG/: index.html
1.2.4/CONTRIBUTING/: index.html
1.2.4/documentation/: index.html
1.2.4/html/: Aspect_8h__incl.map  Attribute_8h__dep__incl.map  Attribute_8h_source.html  BilzImage_8cpp.html  BilzImage_8h.js  BilzImage_8h__dep__incl.map  BilzImage_8h__incl.map  BilzImage_8h_source.html  BoundingBox_8h__incl.map  BoundingBox_8h_source.html  CRS_8cpp__incl.map  CRS_8h__dep__incl.map  CRS_8h_source.html  Cache_8cpp.html  Cache_8h.html  Cache_8h__dep__incl.map  Cache_8h_source.html  CephPoolContext_8cpp.html  CephPoolContext_8cpp__incl.map  CephPoolContext_8h__dep__incl.map  CephPoolContext_8h_source.html  Context_8h.html  Context_8h__dep__incl.map  Context_8h__dep__incl.md5  Context_8h_source.html  DecimatedImage_8h__dep__incl.map  DecimatedImage_8h__incl.map  DecimatedImage_8h__incl.md5  Decoder_8h_source.html  Estompage_8h__dep__incl.md5  ExtendedCompoundImage_8cpp.html  ExtendedCompoundImage_8h.html  ExtendedCompoundImage_8h__dep__incl.md5  FileContext_8h__dep__incl.map  FileContext_8h__incl.map  FileImage_8cpp.html  FileImage_8cpp__incl.map  FileImage_8h__dep__incl.map  FileImage_8h_source.html  Format_8cpp.html  (+344 more)
1.2.4/search/: search_index.json
1.3.0/: 404.html  index.html  sitemap.xml
1.3.0/CHANGELOG/: index.html
1.3.0/CONTRIBUTING/: index.html
1.3.0/documentation/: index.html
1.3.0/html/: AspectImage_8h_source.html  Aspect_8h.html  Aspect_8h__dep__incl.map  Aspect_8h__dep__incl.md5  Aspect_8h__incl.md5  Attribute_8h.html  Attribute_8h__incl.map  Attribute_8h_source.html  BilzImage_8cpp__incl.map  BilzImage_8cpp__incl.md5  BilzImage_8h.html  BilzImage_8h__dep__incl.md5  BoundingBox_8h.html  BoundingBox_8h__dep__incl.map  CRS_8cpp.html  CRS_8cpp.js  CRS_8h.html  CRS_8h__incl.map  Cache_8cpp__incl.map  Cache_8cpp__incl.md5  Cache_8h__incl.map  Cache_8h__incl.md5  CephPoolContext_8h.html  CephPoolContext_8h__incl.map  Context_8h.html  Context_8h.js  Context_8h__dep__incl.map  Context_8h__dep__incl.md5  Context_8h__incl.map  ConvertedChannelsImage_8h_source.html  DataSource_8h_source.html  DataStream_8h_source.html  DecimatedImage_8cpp.html  DecimatedImage_8cpp__incl.map  DecimatedImage_8h.html  DecimatedImage_8h__dep__incl.md5  EmptyImage_8h.html  EmptyImage_8h__dep__incl.map  EmptyImage_8h__incl.map  Estompage_8h.html  (+358 more)
1.3.0/search/: search_index.json
1.3.1/: 404.html  index.html  sitemap.xml
1.3.1/CHANGELOG/: index.html
1.3.1/CONTRIBUTING/: index.html
1.3.1/documentation/: index.html
1.3.1/html/: AscEncoder_8h_source.html  Aspect_8h__dep__incl.map  Attribute_8h__dep__incl.map  Attribute_8h__incl.map  BilEncoder_8h_source.html  BilzImage_8h.html  BilzImage_8h__incl.map  BilzImage_8h__incl.md5  BoundingBox_8h.html  BoundingBox_8h__dep__incl.map  BoundingBox_8h__dep__incl.md5  BoundingBox_8h__incl.md5  CRS_8h__dep__incl.md5  CRS_8h__incl.md5  Cache_8cpp.html  Cache_8h.html  Cache_8h.js  Cache_8h__dep__incl.map  Cache_8h__dep__incl.md5  Cache_8h__incl.map  Cache_8h_source.html  CompoundImage_8h_source.html  Configuration_8h_source.html  Context_8h.html  DecimatedImage_8cpp__incl.map  DecimatedImage_8h.html  DecimatedImage_8h__incl.map  DecimatedImage_8h_source.html  EmptyImage_8h.html  EmptyImage_8h__dep__incl.md5  EmptyImage_8h_source.html  EstompageImage_8h_source.html  Estompage_8h.html  Estompage_8h__incl.md5  ExtendedCompoundImage_8cpp__incl.map  ExtendedCompoundImage_8h.html  FileImage_8cpp__incl.map  FileImage_8h__dep__incl.map  FileImage_8h__dep__incl.md5  FileImage_8h__incl.md5  (+266 more)
1.3.1/search/: search_index.json
1.4.0/: 404.html  index.html  sitemap.xml
1.4.0/CHANGELOG/: index.html
1.4.0/CONTRIBUTING/: index.html
1.4.0/documentation/: index.html
1.4.0/html/: Aspect_8h.html  Aspect_8h__incl.map  Aspect_8h_source.html  Attribute_8h.html  Attribute_8h__dep__incl.md5  Attribute_8h__incl.md5  BilzImage_8cpp.html  BilzImage_8cpp__incl.map  BilzImage_8h__dep__incl.map  BoundingBox_8h__incl.map  CRS_8cpp.html  CRS_8cpp__incl.map  CRS_8cpp__incl.md5  CRS_8h.html  CRS_8h__dep__incl.map  CRS_8h__incl.map  Cache_8cpp__incl.map  Cache_8h_source.html  CephPoolContext_8h.js  CephPoolContext_8h__dep__incl.map  CephPoolContext_8h_source.html  Context_8h.html  Context_8h.js  Context_8h__dep__incl.map  Context_8h__dep__incl.md5  Context_8h_source.html  DecimatedImage_8cpp.html  DecimatedImage_8cpp__incl.md5  DecimatedImage_8h__dep__incl.map  EmptyImage_8h__dep__incl.map  EmptyImage_8h__incl.map  EmptyImage_8h__incl.md5  Estompage_8h__dep__incl.map  Estompage_8h__incl.map  Estompage_8h_source.html  ExtendedCompoundImage_8cpp.html  ExtendedCompoundImage_8h__dep__incl.map  ExtendedCompoundImage_8h__incl.map  ExtendedCompoundImage_8h_source.html  FileContext_8h__dep__incl.map  (+279 more)
1.4.0/search/: search_index.json
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/CHANGELOG/: index.html
2.0.0/CONTRIBUTING/: index.html
2.0.0/documentation/: index.html
2.0.0/html/: AscEncoder_8h_source.html  Aspect_8h__dep__incl.map  Aspect_8h__incl.map  Attribute_8h.html  Attribute_8h_source.html  BilzImage_8cpp__incl.md5  BoundingBox_8h.html  CRS_8cpp.html  CRS_8cpp__incl.md5  CRS_8h_source.html  (+276 more)
2.0.1/: 404.html  index.html  sitemap.xml
2.0.2/: 404.html  index.html  sitemap.xml
2.0.5/: 404.html  index.html  sitemap.xml
3.0.0/: 404.html  index.html  sitemap.xml
3.1.0/: 404.html  index.html  sitemap.xml
4.0.0/: 404.html  index.html  sitemap.xml
4.1.0/: 404.html  index.html  sitemap.xml
docs/: mkdocs.yml
tests/: CppUnitCRS.cpp  CppUnitConvert.cpp  CppUnitConvertnoSSE.cpp  CppUnitDotProd.cpp  CppUnitDotProdnoSSE.cpp  CppUnitFormat.cpp  CppUnitKernel.cpp  CppUnitMult.cpp  CppUnitMultnoSSE.cpp  CppUnitMux.cpp  CppUnitMuxnoSSE.cpp  CppUnitReprojectedImage.cpp  CppUnitResampledImage.cpp  CppUnitTiffHeaderDataSource.cpp
(+4094 files in other folders)
